Runs but no blink

--- a/LedBlinker/Top/CMakeLists.txt
+++ b/LedBlinker/Top/CMakeLists.txt
@@ -13,10 +13,28 @@ set(SOURCE_FILES
 )
 set(MOD_DEPS
   Fw/Logger
-  Svc/LinuxTime
-  # Communication Implementations
-  Drv/Udp
-  Drv/TcpClient
 )
+
+if (CMAKE_SYSTEM_NAME STREQUAL ArduinoFw)
+    list(APPEND SOURCE_FILES
+        "${CMAKE_CURRENT_LIST_DIR}/instances-arduino.fpp"
+        "${CMAKE_CURRENT_LIST_DIR}/LedBlinkerTopology-arduino.cpp"
+    )
+    list(APPEND MOD_DEPS
+        Arduino/ArduinoTime
+    )
+
+else()
+    list(APPEND SOURCE_FILES
+        "${CMAKE_CURRENT_LIST_DIR}/instances-linux.fpp"
+        "${CMAKE_CURRENT_LIST_DIR}/LedBlinkerTopology-linux.cpp"
+    )
+    list(APPEND MOD_DEPS
+            Svc/LinuxTime
+            Drv/Udp
+            Drv/TcpClient
+    )
+endif()
+
 
 register_fprime_module()
