--- a/LedBlinker/settings.ini
+++ b/LedBlinker/settings.ini
@@ -2,6 +2,12 @@
 [fprime]
 project_root: ../
 framework_path: ../fprime
+library_locations: ../fprime-arduino
 
 default_cmake_options:  FPRIME_ENABLE_FRAMEWORK_UTS=OFF
                         FPRIME_ENABLE_AUTOCODER_UTS=OFF
+
+[native]
+default_cmake_options:  FPRIME_ENABLE_FRAMEWORK_UTS=OFF
+                        FPRIME_ENABLE_AUTOCODER_UTS=OFF
+                        FPRIME_USE_STUBBED_DRIVERS=ON
